infra(generator): inline CSS via raw import in Landing; block analytics + bbox capture in compare; layout tweaks for clone routes; deterministic scaffolding

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "playwright:install": "playwright install",
     "playwright:codegen": "playwright codegen localhost:5173",
     "mcp:playwright": "npx @playwright/mcp@latest",
-    "clone": "node scripts/clone.mjs"
+    "clone": "node scripts/clone.mjs",
+    "clone:compare": "node scripts/clone-compare.mjs"
   },
   "dependencies": {
     "react": "^18.2.0",
