infra(orchestrator): add clone-site wrapper to time clone and run compare separately\nfeat(generator): auto-accept cookie consent and auto-scroll to load lazy content\nchore: add npm run clone:site

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "playwright:codegen": "playwright codegen localhost:5173",
     "mcp:playwright": "npx @playwright/mcp@latest",
     "clone": "node scripts/clone.mjs",
-    "clone:compare": "node scripts/clone-compare.mjs"
+    "clone:compare": "node scripts/clone-compare.mjs",
+    "clone:site": "node scripts/clone-site.mjs"
   },
   "dependencies": {
     "react": "^18.2.0",
